@@ -1,4 +1,3 @@
-{port_specs, [{"priv/mmap.so", ["c_src/mmap.c"]}]}.
 {lib_dirs, [".."]}.
 
 
