@@ -1,7 +1,7 @@
 {application, flussonic,
  [
   {description, ""},
-  {vsn, "3.69.1"},
+  {vsn, "3.69.2"},
   {registered, []},
   {applications, [
                   kernel,
