@@ -8,9 +8,6 @@
 % Enable this option ONLY if health checker breaks something in your production
 % {disable_health, true}.
 
-% Enable this ONLY if you have serious problems with mmap, such as segfault of erlang proces
-% {file_access, file}.
-
 
 % 'rewrite' section is for ondemand streaming.
 % You can play rtmp://localhost/rtmp/cam0 or http://localhost:8080/cam0/manifest.f4m or http://localhost:8080/cam0/index.m3u8
